--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -5,32 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#317EFB">
-  <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
+  <link rel="shortcut icon" href="icons/Budget3.jpg" type="image/x-icon">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
-  <title>Budget Tracker</title>
+  <title>Travel Wallet</title>
 </head>
 <body>
   <div class="wrapper">
     <div class="total">
-      <div class="total">Your total is: $<span id="total">0</span></div>
+      <div class="total">My budget for trip $<span id="total">1000</span></div>
     </div>
 
     <div class="form">
       <input type="text" id="t-name" placeholder="Name of transaction" />
       <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-      <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-      <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+      <button id="add-btn"><i class="fa fa-plus buttons"></i> new additions</button>
+      <button id="sub-btn"><i class="fa fa-minus"></i> spent amount</button>
       <p class="error"></p>
     </div>
 
     <div class="transactions">
       <table>
         <thead>
-          <th>Transaction</th>
-          <th>Amount</th>
+          <th>My Transactions</th>
+          <th>Amount spent </th>
         </thead>
         <tbody id="tbody">
           
